--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,8 +1,12 @@
-@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:regular,bold,italic&subset=latin,latin-ext');
+@import url('https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,700&display=swap');
 
 * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-family: 'Source Sans Pro', Helvetica, sans-serif;
+    font-family: 'NA Sans', Helvetica, sans-serif;
+}
+
+body {
+    overflow-x: hidden;
 }
